# legendsoftaria-wiki

./: .gitignore  README.md  build-watch.bat  build-watch.sh  build.bat  build.sh
builder/: Cargo.toml
builder/src/: config.rs  data.rs  lib.rs  main.rs  output.rs  postprocess.rs  render.rs  server.rs  watch.rs
site/data/boss-rooms/: dark-dungeon.json
site/data/bosses/: lich1.json
site/data/items/: 0-iron-ore.json  10-iron-body.json  11-iron-legs.json  12-bronze-pickaxe.json  13-copper-ore.json  14-bronze-bar.json  15-iron-bar.json  16-tin-ore.json  17-bronze-helm.json  18-bronze-body.json  19-bronze-legs.json  2-bronze-sword.json  20-bones.json  21-iron-pickaxe.json  22-mithril-bar.json  23-mithril-helm.json  24-mithril-body.json  25-mithril-legs.json  26-mithril-pickaxe.json  27-adamant-bar.json  28-adamant-helm.json  29-adamant-body.json  3-iron-sword.json  30-adamant-legs.json  31-adamant-pickaxe.json  32-mithril-ore.json  33-adamant-ore.json  34-bone-helm.json  35-bone-body.json  36-bone-legs.json  37-raw-shrimp.json  38-shrimp.json  39-raw-sardine.json  4-mithril-sword.json  40-sardine.json  41-raw-anchovies.json  42-anchovies.json  43-raw-trout.json  44-trout.json  45-raw-salmon.json  (+27 more)
site/data/npcs/: 14-goblin1.json  15-goblin2.json  16-goblin3.json  23-lich1.json  24-lich2.json  25-lich3.json  3-cow.json  32-rat1.json  33-rat2.json  34-rat3.json  (+11 more)
site/html/: index.html  robots.txt  sitemap.txt
site/templates/: base.html  boss.html  boss_room.html  boss_room_index.html  bosses_index.html  item.html  items_index.html  npc.html  npcs_index.html  page.html
(+12 files in other folders)
