[package]
name = "wiki_builder"
version = "0.1.0"
edition = "2021"
description = "Public wiki builder for Legends of Taria - generates HTML from JSON definitions"

[lib]
name = "wiki_builder"
path = "src/lib.rs"

[[bin]]
name = "wiki_builder"
path = "src/main.rs"

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tera = "1"
walkdir = "2"
pulldown-cmark = "0.12"
anyhow = "1"
regex = "1"
