[package]
name = "wiki_builder"
version = "0.1.0"
edition = "2021"
description = "Public wiki builder for Legends of Taria - generates HTML from JSON definitions"

[lib]
name = "wiki_builder"
path = "src/lib.rs"

[[bin]]
name = "wiki_builder"
path = "src/main.rs"

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1.0.149"
tera = "1"
walkdir = "2"
pulldown-cmark = "0.13.0"
anyhow = "1.0.100"
regex = "1.12.2"
tiny_http = "0.12"
notify = "8.2.0"
